--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 "Hello World" 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home Page</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <ul>
+            <li><a href = AboutMe/index.html>About Me</a></li>
+            <li><a href = MyPortfolio/index.html>My Portfolio</a></li>
+            <li><a href = TechSkills/index.html>Tech Skills</a></li>
+            <li><a href = ContactMe/index.html>Contact Me</a></li>
+        </ul>
+    </body>
+</html>
