Contact info in navbar

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-"Hello World" 
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,7 +9,10 @@
             <li><a href = AboutMe/index.html>About Me</a></li>
             <li><a href = MyPortfolio/index.html>My Portfolio</a></li>
             <li><a href = TechSkills/index.html>Tech Skills</a></li>
-            <li><a href = ContactMe/index.html>Contact Me</a></li>
+            <li><a href = tel:2149237938 target = "_blank">Phone</a></li>
+            <li><a href = mailto:mccormackj@utexas.edu target = "_blank">Email</a></li>
+            <li><a href = https://github.com/mccormackj target = "_blank">Github</a></li>
+            <li><a href = https://www.linkedin.com/in/johanna-mccormack target = "_blank">LinkedIn</a></li>
         </ul>
     </body>
 </html>
