--- a/TechSkills/index.html
+++ b/TechSkills/index.html
@@ -1,1 +1,19 @@
-"Tech Skills"
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home Page</title>
+        <link href="../styles.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/b02836a1b3.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <ul>
+            <li><a href = ../AboutMe/index.html>About Me</a></li>
+            <li><a href = ../MyPortfolio/index.html>My Portfolio</a></li>
+            <li><h1>Tech Skills</h1></li>
+            <li><a href = tel:2149237938 target = "_blank"><i class="fas fa-phone"></i></a></li>
+            <li><a href = mailto:mccormackj@utexas.edu target = "_blank"><i class="fas fa-envelope"></i></a></li>
+            <li><a href = https://github.com/mccormackj target = "_blank"><i class="fab fa-github"></i></a></li>
+            <li><a href = https://www.linkedin.com/in/johanna-mccormack target = "_blank"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
+    </body>
+</html>
