--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>About Me</title>
         <link href="../styles.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/b02836a1b3.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -15,5 +18,13 @@
             <li><a href = https://github.com/mccormackj target = "_blank"><i class="fab fa-github"></i></a></li>
             <li><a href = https://www.linkedin.com/in/johanna-mccormack target = "_blank"><i class="fab fa-linkedin"></i></a></li>
         </ul>
+        <br>
+        <img src = "../Images/profile.jpg" align = "right" width = "200px" style = "margin-top: 25px; margin-bottom: 25px;"/>
+        <h2>Hello! My name is Johanna McCormack</h2>
+        <p> I'm a junior Electrical and Computer Engineering major at UT Austin, focusing on software engineering.
+            I'm experienced in C/C++ and Java, and am eager to learn and experience more of what the world of high-level software has to offer. 
+            My past jobs in the fast-paced service industry have given me strong communication skills, along with adaptability and time management.
+            I am currently seeking internship opportunities for Summer 2022.
+        </p>
     </body>
 </html>
